--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.0.6",
 		"@vitest/coverage-v8": "^1.3.1",
+		"daisyui": "^5.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
