--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "camp-sites-map-new",
 	"private": true,
-	"version": "0.4.3",
+	"version": "0.2.11",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -16,6 +16,7 @@
 		"deploy": "wrangler pages deploy .svelte-kit/cloudflare"
 	},
 	"devDependencies": {
+		"@beyonk/svelte-mapbox": "^11.0.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/kit": "^2.17.2",
