--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.0.6",
 		"@vitest/coverage-v8": "^1.3.1",
-		"daisyui": "^5.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -32,7 +31,6 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "^5.20.5",
 		"svelte-preprocess": "^6.0.3",
 		"vite": "^6.0.0",
 		"vitest": "^1.3.1"
@@ -43,6 +41,8 @@
 		"@sveltejs/adapter-cloudflare": "^5.0.3",
 		"autoprefixer": "^10.4.20",
 		"mapbox-gl": "^3.10.0",
-		"tailwindcss": "^4.0.6"
+		"tailwindcss": "^4.0.9",
+		"daisyui": "^5.0.0",
+		"svelte": "^5.20.5"
 	}
 }
