--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
 		"test": "vitest",
 		"test:coverage": "vitest run --coverage",
 		"predeploy": "npm run build",
-		"deploy": "wrangler pages deploy .svelte-kit/cloudflare"
+		"deploy": "vercel deploy"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.0.6",
@@ -32,17 +33,17 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte-preprocess": "^6.0.3",
+		"vercel": "^41.3.2",
 		"vite": "^6.0.0",
 		"vitest": "^1.3.1"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.48.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/adapter-cloudflare": "^5.0.3",
 		"autoprefixer": "^10.4.20",
-		"mapbox-gl": "^3.10.0",
-		"tailwindcss": "^4.0.9",
 		"daisyui": "^5.0.0",
-		"svelte": "^5.20.5"
+		"mapbox-gl": "^3.10.0",
+		"svelte": "^5.20.5",
+		"tailwindcss": "^4.0.9"
 	}
 }
