update vite port

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.2.13",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 5174",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.48.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@vercel/analytics": "^1.5.0",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^5.0.0",
 		"mapbox-gl": "^3.10.0",
